[modify] Remove MeetId and improve bugs
